@@ -11,6 +11,7 @@ Version - 2.6 - 09-21-15
 -Removed functions simFossilTaxa, simFossilTaxa_SRCond and simPaleoTrees and all references elsewhere in paleotree. Use simFossilRecord instead!
 -Changed simTermTaxaAdvanced to use simFossilRecord rather than simFossilTaxa
 -Modified divCurveFossilRecordSim (which powers plot functionality for simFossilRecord) so that red sampling curve isn't plotted if the only sampled taxa are extant sampled-at-the-modern taxa
+-Added check to freqRat in case calculated freqRat is NaN (i.e. 0 / 0 )
 
 Version - 2.5 - 09-20-15
 -Added argument APIversion to makePBDBtaxonTree which allows a user to control which version of the API is called when argument solveMissing=queryPBDB. Current default is "1.1", this will need to be updated when PBDB API 1.2 becomes public
